--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 alembic==1.9.2
 boto3==1.34.108
 botocore==1.34.108
-chromadb==0.4.24
-chromadb-data-pipes==0.0.8
 Flask==2.2.2
 Flask-Cors==3.0.10
 Flask-Login==0.6.2
@@ -20,3 +18,7 @@ SQLAlchemy==1.4.46
 Werkzeug==2.2.2
 WTForms==3.0.1
 gunicorn==20.1.0
+
+chromadb==0.4.24
+chromadb-data-pipes==0.0.8
+sentence_transformers==3.0.1
