--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
 /node_modules
 /chroma_db
 /.pnp
 .pnp.js
 .env
+node_modules
 
 # testing
 /coverage
@@ -23,6 +21,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-/__pycache__
-
