--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.8.3",
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
