--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-drag-drop-files": "^2.4.0",
+    "react-markdown": "^8.0.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "react-markdown": "^8.0.5"
+    "remark-gfm": "^4.0.0",
+    "remark-rehype": "^11.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
